# todo-app

./: .gitignore  README.md  pyproject.toml  vercel.json
src/backend/: main.py
src/frontend/: app.py
src/todo_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
